<resources>
    <string name="app_name">DrugMaster</string>
    <string name="welcome_to_dragmaster">Добро пожаловать в \n DrugMaster</string>
    <string name="name">  Имя</string>
    <string name="password"> Пароль</string>
    <string name="singin">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="rename">Введиде название фирмы</string>
    <string name="repass">Повторите пароль</string>
    <string name="email_gmail">Email или gmail</string>
    <string name="fisical_address">Адрес Организации(Полный)</string>
    <string name="phone">телефон(номер)</string>
    <string name="registr_code">Код регистра</string>
    <string name="manager">Менеджер</string>
    <string name="client">клиент</string>
    <string name="registrate">Зарегистрироваться</string>
    <string name="info">Инфо</string>
    <string name="list">Список</string>
    <string name="orders">Заказы</string>
    <string name="archive">Архив</string>
    <string name="other">Другое</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="managers">Менеджеры</string>
    <string name="search">Поиск</string>
    <string name="basket">Корзина</string>
    <string name="complaint">Пожаловаться</string>
    <string name="signOut">Выйти</string>
    <string name="todo">TODO</string>
    <string name="status">status</string>
    <string name="datachange">Изменить данные</string>
    <string name="changeandsave">Измените данные и нажмите сохранить.</string>
    <string name="save">cохранить</string>
    <string name="cancel">отмена</string>
    <string name="add">добавить</string>
    <string name="namedrugs">Наимненование</string>
    <string name="drugaddinfo">Введите данные лекарства и сохраните</string>
    <string name="drugmakes">Изготовитель</string>
    <string name="price">цена в сомах</string>
    <string name="textview">TextView</string>
    <string name="change">изменить</string>
    <string name="delete">удалить</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="itogo">Итого:</string>
    <string name="orderprice">Стоимость заказа</string>
    <string name="orderlist">Список заказа:</string>
    <string name="close">Закрыть</string>
    <string name="_1">1</string>
    <string name="drugNotFound">Лекарство не найдено</string>
    <string name="spisok">Список</string>

    <array name="unit">
        <item>Упаковка</item>
        <item>Флакон</item>
        <item>Штук</item>
        <item>Блистер</item>
    </array>
</resources>
