<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info"/>

        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/ic_manager"
            android:title="@string/managers"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"/>

        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_orders"
            android:title="@string/basket"/>


    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_complaint"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/complaint"/>
        </menu>
    </item>
</menu>