<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/info"/>

        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/list"/>

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/orders"/>

        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_clients"
            android:title="@string/clients"/>

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_complaint"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/complaint"/>
            <item
                android:id="@+id/nav_singout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/signOut"/>
        </menu>
    </item>
</menu>