<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".popups.PopupAdddrugs">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center"
        android:layout_marginHorizontal="8dp"
        android:textSize="25sp"
        android:textColor="@color/colorAccent"
        android:text="@string/drugaddinfo" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        android:hint="@string/namedrugs"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Spinner
        android:id="@+id/unit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:entries="@array/unit"/>

    <EditText
        android:id="@+id/maker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/drugmakes"
        android:layout_marginHorizontal="8dp"
        android:textSize="20sp"
        android:inputType="text"
        android:theme="@style/AppTheme"
        android:importantForAutofill="no"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="8dp"
        android:textSize="20sp"
        android:theme="@style/AppTheme"
        android:inputType="number"
        android:hint="@string/price"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="35sp"
        android:layout_marginBottom="30sp"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="15sp"
            android:background="@drawable/sing_in_button"
            android:text="@string/save"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="15sp"
            android:background="@drawable/registration_button"
            android:paddingHorizontal="8sp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>
</LinearLayout>