<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackround">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/activityBackround">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="250sp"
                        app:srcCompat="@drawable/decktop"
                        android:contentDescription="@string/todo" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/orgName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="5sp"
                            android:text="@string/rename"
                            android:textColor="#4C4B4B"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="5sp"
                            android:text="@string/email_gmail"
                            android:textColor="#4C4B4B"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="5sp"
                            android:text="@string/phone"
                            android:textColor="#4C4B4B"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="5sp"
                            android:text="@string/fisical_address"
                            android:textColor="#4C4B4B"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginVertical="5sp"
                            android:text="@string/status"
                            android:textColor="#4C4B4B"
                            android:textSize="20sp" />

                        <Button
                            android:id="@+id/changebtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginHorizontal="100sp"
                            android:background="@drawable/sing_in_button"
                            android:text="@string/datachange"
                            android:layout_marginBottom="15sp"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>