<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activities.RefactorActivty">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:title="@string/manager"
        app:titleMarginStart="5dp"/>

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_marginVertical="3sp"
        android:layout_height="27dp"
        android:paddingStart="10sp"
        android:textSize="17sp"
        android:text="@string/textview"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginVertical="3sp"
        android:layout_height="27dp"
        android:paddingStart="10sp"
        android:textSize="17sp"
        android:text="@string/orderlist"
        tools:ignore="RtlSymmetry" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/orders"
        />

</LinearLayout>