<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/firmname"
        android:layout_width="match_parent"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_height="43dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_marginVertical="3sp"
        android:layout_height="27dp"
        android:paddingStart="10sp"
        android:textSize="17sp"
        android:text="@string/textview"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_marginVertical="3sp"
        android:layout_height="27dp"
        android:paddingStart="10sp"
        android:textSize="17sp"
        android:text="@string/textview"
        tools:ignore="RtlSymmetry" />
    <ListView
        android:id="@+id/shortDrugList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="30sp"
        android:orientation="horizontal"
        tools:ignore="UnusedAttribute">

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:layout_marginHorizontal="20sp"
            android:layout_weight="2"
            android:background="@drawable/sing_in_button"
            android:text="@string/delete"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:layout_marginHorizontal="20sp"
            android:layout_weight="2"
            android:background="@drawable/registration_button"
            android:paddingHorizontal="8sp"
            android:text="@string/registration"
            android:textColor="@color/colorPrimaryDark"
            tools:ignore="ButtonStyle,RtlHardcoded" />
    </LinearLayout>
</LinearLayout>