<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="13sp"
    android:background="#e8e8e8"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37sp"
        android:padding="2sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:paddingStart="8sp"
            android:paddingVertical="3sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/textview"
            tools:ignore="RtlSymmetry" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selected"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/unit"
            android:layout_width="0dp"
            android:paddingStart="8sp"
            android:paddingVertical="3sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/textview"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:paddingStart="8sp"
            android:textColor="#123b16"
            android:paddingVertical="3sp"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44sp"
        android:padding="2sp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/count"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="5"
            android:inputType="number"
            android:paddingVertical="3sp"
            android:paddingStart="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#0C0B0B"
            android:textColorHint="#FFFFFF"
            android:textColorLink="@color/colorPrimaryDark"
            tools:ignore="LabelFor,RtlSymmetry"
            android:autofillHints="" />

        <Button
            android:id="@+id/plus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/plus"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/minus"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:paddingStart="8sp"
            android:paddingVertical="3sp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textSize="18sp"
            android:textColor="#123b16"
            android:text="@string/itogo"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/itog"
            android:layout_width="wrap_content"
            android:paddingStart="8sp"
            android:paddingVertical="3sp"
            android:textSize="18sp"
            android:textColor="#123b16"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</LinearLayout>